# c_Learning

./: .gitignore  CMakeLists.txt  README.md  a.out  main
src/core_study/: CppBasicGrammar.c  week2.c
src/core_study/week1/: fprintf.c  hello.c  series.c  sign.c  sum.c  validator.c
src/core_study/week1/makefile_test/test1/: Makefile1  tictactoe  tictactoe.c
src/core_study/week1/makefile_test/test2/: Makefile2  main.c  phrase.c
src/core_study/week1/makefile_test/test3/: Makefile  client.c  database.c  server.c  shared.c  shared.h
src/core_study/week1/makefile_test/test4/: Makefile  main  main.c  phraseA.c  phraseB.c  phraseC.c
src/core_study/week1/makefile_test/test4/include/: phraseC.h
src/core_study/week2/: Calc.c  Dynamic.c  Largest.c  Memory.c  StringTest.c  Week2Test2.c  Week2Test3.c  Week2Test4.c  Week2Test5.c  a.out  location.c
src/core_study/week3/: Calculation.c  Card.c  MutiDimensionalArrays.c  PatternStr.c  Read.c  Read.h  RockPaperScissors.c  Split.c  Test.txt  WriteArguments.c
